# MultiBodySolver

./: CMakeLists.txt  LICENSE  README.md  environment.yaml
example/: solar_system.txt
include/: Body.hpp  Gravity.hpp  Universe.hpp
src/: Body.cpp  Gravity.cpp  Main.cpp  Universe.cpp
src/gui/: Gui.cpp
